add achieve list activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity
             android:name=".TimerActivity">
         </activity>
+        <activity
+            android:name=".AchievementsActivity">
+        </activity>
     </application>
 
 </manifest>
